# qt_worklog

./: .gitignore  README.md  SPEC.md  pyproject.toml
qt_worklog/: __init__.py  config.py  logging_config.py  main.py
qt_worklog/services/: api_client.py
qt_worklog/services/auth/: callback_server.py  credentials.py  google_auth.py  token_manager.py
qt_worklog/ui/: day_card.py  flow_layout.py  login_window.py  main_window.py  style.qss  worklog_card.py
~/.config/worklog/: firebase_config.json  google_oauth_client.json
