[tool.poetry]
name = "qt_worklog"
version = "0.1.0"
description = "A PySide6 application skeleton."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "qt_worklog"}]

[tool.poetry.dependencies]
python = "^3.12"
PySide6 = "^6.6"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qt-worklog = "qt_worklog.main:main"
