[tool.poetry]
name = "qt_worklog"
version = "0.1.0"
description = "A PySide6 application skeleton."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "qt_worklog"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
PySide6 = "6.6.0"
pydantic = "*"
requests = "*"
secretstorage = "*"
google-auth-oauthlib = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-qt = "^4.5.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qt-worklog = "qt_worklog.main:main"
